refactor: modernize with Java 21 features and add InputValidator
- Replaced nested Math.min/max with Math.clamp in AbstractListDialog.
- Introduced InputValidator and PasswordValidator interfaces for cleaner validation logic.
- Added built-in validators: nonEmpty, email, integer, regex, maxLength.
- Updated TextLineDialog and PasswordDialog builders to support new validator types.
- Fixed unmodifiable list issue in AbstractListDialog to support FileDialog.
- Updated tests to reflect API changes.